Visuals complete. Buttons work. Some logic needs to be fixed in JS.

--- a/index.html
+++ b/index.html
@@ -11,19 +11,27 @@
             <div id="calculator">
                 <div id="display">
                     <div id="answer-display"></div>
-                    <div id="input-display">69</div>
+                    <div id="operator-display">Test</div>
+                    <div id="input-display"></div>
                 </div>
                 <div id="keys">
+                        <button class="key other" style="width: 50%; font-size: 24px" value="clear">Clear</button>
+                        <button class="key other" value="back">⬅</button>
+                        <button class="key operator" value="add">+</button>
                     <button class="key number" value="7">7</button>
-                    <button class="key number">8</button>
-                    <button class="key number">9</button>
-                    <button class="key number">4</button>
-                    <button class="key number">5</button>
-                    <button class="key number">6</button>
-                    <button class="key number">1</button>
-                    <button class="key number">2</button>
-                    <button class="key number">3</button>
-                    <button class="key number" style="width: 50%">0</button>
+                    <button class="key number" value="8">8</button>
+                    <button class="key number" value="9">9</button>
+                        <button class="key operator" value="subtract">-</button>
+                    <button class="key number" value="4">4</button>
+                    <button class="key number" value="5">5</button>
+                    <button class="key number" value="6">6</button>
+                        <button class="key operator" value="multiply">x</button> 
+                    <button class="key number" value="1">1</button>
+                    <button class="key number" value="2">2</button>
+                    <button class="key number" value="3">3</button>
+                        <button class="key operator" value="divide">÷</button>
+                    <button class="key number" style="width: 50%" value="0">0</button>
+                        <button class="key operator" style="width: 50%" value="equals">=</button> 
                 </div>
             </div>
         </div>
