--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     <button class="key number" value="3">3</button>
                         <button class="key operator" value="divide">÷</button>
                     <button class="key number" style="width: 50%" value="0">0</button>
-                        <button class="key operator" style="width: 50%" value="equals">=</button> 
+                    <button class="key number" value=".">.</button>
+                        <button class="key operator" value="equals">=</button> 
                 </div>
             </div>
         </div>
