Added +/- button. Fixed decimal values being messed up in math evaluation.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
                     <div id="input-display"></div>
                 </div>
                 <div id="keys">
-                        <button class="key other" style="width: 50%; font-size: 24px" value="clear">Clear</button>
+                        <button class="key other" style="font-size: 24px" value="clear">Clear</button>
                         <button class="key other" value="back">⬅</button>
+                        <button class="key other" style="font-size: 24px" value="negative">+/-</button>
                         <button class="key operator" value="add">+</button>
                     <button class="key number" value="7">7</button>
                     <button class="key number" value="8">8</button>
