Improved function of +/- button with readout. Can now press then put in number to become negative, if input is currently 0.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
                 <div id="display">
                     <div id="answer-display"></div>
                     <div id="operator-display">Test</div>
-                    <div id="input-display"></div>
+                    <div id="bottom-display">
+                        <div id="negative-display"></div>
+                        <div id="input-display"></div>
+                    </div>
+                    
                 </div>
                 <div id="keys">
                         <button class="key other" style="font-size: 24px" value="clear">Clear</button>
